Fix hover issue on mobile

--- a/src/styles/MemoryCard.css
+++ b/src/styles/MemoryCard.css
@@ -29,7 +29,6 @@
   border-radius: 1rem;
 }
 
-.outerMemCardWrapper:hover,
 .outerMemCardWrapper:focus {
   outline: none;
   border: none;
@@ -53,7 +52,7 @@
   width: 100%;
   height: 100%;
   padding: 0;
-  transform: rotateX(0deg)
+  transform: rotateX(0deg);
 }
 
 .front {
@@ -257,5 +256,19 @@
   }
   100% {
     transform: rotateY(-10deg) rotateX(10deg) rotateZ(0.5deg) scale(1.05);
+  }
+}
+
+@media (hover: hover) {
+  .outerMemCardWrapper:hover {
+    outline: none;
+    border: none;
+    box-shadow: 0px 0px 5px 3px #03cef1, 0px 0px 5px 1px rgba(255, 215, 0, 0.5); /* Glowing box shadow with golden color */
+    transform: rotateY(-10deg) rotateX(10deg) rotateZ(0.5deg) scale(1.05);
+    animation-name: cardToggleAround;
+    animation-duration: 3.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-delay: 1.75s;
   }
 }
